# degiro.h

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/private/include/: defines.h  degiro_account.h  degiro_curl.h  degiro_main.h  degiro_portfolio.h  degiro_price.h  degiro_products.h  degiro_transactions.h  degiro_user.h  degiro_utils.h  dg_curl.h  dg_dictionary.h  dg_main.h  dg_products.h  dg_transactions.h  dg_types.h  dg_user.h  dg_utils.h  nob.h
lib/private/src/: degiro_account.c  degiro_curl.c  degiro_main.c  degiro_portfolio.c  degiro_price.c  degiro_products.c  degiro_transactions.c  degiro_user.c  degiro_utils.c  dg_curl.c  dg_main.c  dg_products.c  dg_transactions.c  dg_types.c  dg_user.c  dg_utils.c  utils.c
lib/public/include/: account.h  chart.h  curl.h  degiro.h  dictionary.h  helpers.h  portfolio.h  prices.h  products.h  transactions.h  types.h  user.h  utils.h
lib/public/src/: chart.c  degiro.c  dictionary.c  helpers.c  portfolio.c  products.c  transactions.c  types.c  user.c  utils.c
